# nlp_project_my_take

./: .gitignore  README.md  docker-compose.yaml  pgdump.sql
backend/: Dockerfile  fill_db.py  pyproject.toml  test.py
backend/dictionary/: main.py  views.py  webapp.py
backend/dictionary/background_tasks/: background_embeddings.py  background_triplets.py
backend/dictionary/database/: engine.py  models.py  queries.py
backend/dictionary/misc/: utils.py
backend/dictionary/nlp/: embeddings.py  graphs.py  languages.py  preprocessing.py  stemming.py  triplets.py
backend/dictionary/routers/: descriptions_router.py  embeddings_router.py  graphs_router.py  terms_router.py  topics_router.py  triplets_router.py
backend/filler_data/: fizhim_terms.json  him_terms.json  mendeleev_terms.json
database/: Dockerfile.postgres
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/lib/: api.js
frontend/src/lib/components/: PipelineViz.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/add/: +page.svelte
frontend/src/routes/word/[id]/: +page.svelte
