[project]
name = "dictionary"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12.3,<3.14"
dependencies = [
    "numpy<2.0.0",
    "spacy (>=3.8.7,<4.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "loguru (>=0.7.3,<0.8.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "ruff (>=0.12.0,<0.13.0)",
    "langid (>=1.1.6,<2.0.0)",
    "stanza (>=1.10.1,<2.0.0)",
    "networkx (>=3.5,<4.0.0)",
    "torch==2.2.2+cpu ; sys_platform != 'darwin' and platform_machine != 'arm64'",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
